--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
 
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -16,7 +16,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .container {
@@ -77,8 +77,8 @@ label {
   margin: 10px 0;
 }
 
-input[type='text'],
-input[type='number'] {
+input[type="text"],
+input[type="number"] {
   border: 1px solid #dedede;
   border-radius: 2px;
   display: block;
@@ -133,17 +133,31 @@ input[type='number'] {
 .delete-btn {
   cursor: pointer;
   background-color: #e74c3c;
-  border: 0;
   color: #fff;
+  border: 0;
   font-size: 20px;
   line-height: 20px;
   padding: 2px 5px;
   position: absolute;
   top: 50%;
-  left: 0;
-  transform: translate(-100%, -50%);
+  right: -5px;
+  transform: translate(100%, -50%);
   opacity: 0;
   transition: opacity 0.3s ease;
+}
+
+.edit-btn {
+  cursor: pointer;
+  background-color: #2ecc71;
+  color: #fff;
+  border: 0;
+  font-size: 15px;
+  line-height: 15px;
+  padding: 2px 5px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(-100%, -50%);
 }
 
 .list li:hover .delete-btn {
